spec/error_branch_type_mismatch.expected
spec/error_branch_type_mismatch.kex:2:12: error: Branch type mismatch: 'then' returns Integer but 'else' returns String
Aborted: fix type errors before running (use --no-check to skip).
